# hwa-new

./: .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_IMPROVEMENT_FINAL_REPORT.md  CODE_REVIEW_COMPREHENSIVE.md  CONTEXT7_MCP_SETUP_SUMMARY.md  CONTEXTO_PROXIMO_CHAT.md  CPU_OPTIMIZATION_VALIDATION_REPORT.md  MODEL_ARCHITECTURE.md  Makefile  PERFORMANCE_OPTIMIZATION_README.md  PERFORMANCE_SECURITY_OPTIMIZATION.md  PLANO_EXECUCAO_DETALHADO.md  QWEN.md  README.md  REGRESSION_TESTING_REPORT.md  RESOLUCAO_DEPENDENCIAS_CIRCULARES_RELATORIO_FINAL.md  RESYNC_UNIFIED_DOCUMENTATION.md  TODO.md  action-plan-subtasks.md  analysis-findings.md  analyze_code.py  analyze_imports.py  architecture-diagram.md  architecture-optimization-diagram.md  architecture-optimization-plan.md  audit_log.db  audit_queue.db  bandit_core_report.txt  bandit_improved_report.txt  bandit_report.json  bandit_security_report.json  bandit_security_report_updated.json  benchmark_test_performance.py  blackbox_mcp_settings.json  config.yaml  debug_csp_validation.py  debug_test.py  (+72 more)
.aincrok/: mcp.json
.blackbox/memory/: project.txt
.cursor/rules/: cursorhwa.mdc
.github/workflows/: ci.yml  main.yml  mutation-test.yml
.kilocode/: mcp.json
.serena/: project.yml
.serena/memories/: analise_qualidade_codigo_configuracao.md  analise_wal_rollback.md  auditoria_cache_core.md  auditoria_cache_core_conclusao.md  auditoria_cache_core_detalhamento_tecnico.md  auditoria_cache_core_integracoes.md  auditoria_cache_core_plano_acao.md  auditoria_cache_core_pontos_criticos.md  auditoria_cache_core_resumo_analise_qualidade.md  auditoria_cache_core_resumo_executivo.md  auditoria_cache_core_status_atual.md  cache_refactoring_plan.md  codacy-windows-limitation.md  config-validation-enhanced.md  implementation_summary.md  melhores_praticas_configuracao_python_2025.md  melhores_praticas_implementadas.md  migration_plan.md  project_file_structure_document.md  recomendacoes_analise_codigo_windows.md  redis-exceptions-implemented.md  redis-init-refactored.md  redis_cache_enhancement_implementation.md  refatoracao_call_llm_resumo.md  refatoracao_complexidade_funcoes_criticas.md  refatoracao_complexidade_resumo.md  refatoracao_error_response_resumo.md  refatoracao_parse_llm_json_resumo.md  refatoracao_soc2_compliance_resumo.md  resumo_sistema_configuracao_implementado.md  startup-config-validation-added.md  startup-error-messages-improved.md  (+2 more)
.tasks/: 2025-09-29_1_analyse_codigo.md  2025-09-29_2_implementar-melhorias-analise.md
app/: __main__.py  background_tasks.py
benchmarks/: cache_benchmark.py  performance_benchmarks.py
config/: base.py  development.py  log_rotator.ini  production.py  runtime.json
docs/: API_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  WA_API3_v2.json  WA_API_94.json  architecture.md  async_cache_optimization.md  cache_optimization_summary.md  extension-guide.md  populate_knowledge_base.py  troubleshooting-guide.md
examples/: enhanced_cache_example.py  enhanced_security_example.py
mutants/: pyproject.toml  test_agent_manager_minimal.py  test_async_lock.py  test_async_lock_fixed.py  test_async_lock_only.py  test_json_parser.py
prompts/: fewshot_hwa.md
rag/: .gitignore
reports/: mypy_type_check_report.md  security-audit-final-summary.md  security-audit-report.md
requirements/: base.txt  dev.txt
resync/: __init__.py  app_factory.py  app_factory.py.bak  ask.txt  ask1.txt  ask2.txt  ask3.txt  ask4.txt  csp_validation.py  environment_managers.py  lifespan.py  lifespan.py.bak  main.py  main_improved.py  settings.py  settings_factory.py  settings_migration.py  settings_observer.py  settings_validator.py  settings_validator_fixed.py
resync/RAG/microservice/: Dockerfile  __init__.py  __main__.py  job_queue.db  main.py  pyproject.toml  run.py
resync/RAG/microservice/.venv2/: pyvenv.cfg
resync/RAG/microservice/.venv2/Scripts/: activate  activate.bat  runxlrd.py
resync/RAG/microservice/api/: __init__.py  endpoints.py  models.py  router.py
resync/RAG/microservice/config/: __init__.py  settings.py
resync/RAG/microservice/core/: __init__.py  file_ingestor.py  init_rag_service.py  job_utils.py  knowledge_graph_circuit_breaker.py  process_rag.py  process_rag_old.py  processor.py  redis_job_queue.py  retriever.py  sqlite_job_queue.py  vector_store.py
resync/RAG/microservice/health/: __init__.py  rag_health_check.py
resync/RAG/microservice/tests/: __init__.py  test_main.py  test_sqlite_queue.py  test_sqlite_queue_standalone.py  test_sqlite_queue_standalone_fixed.py
routes/: api.py  main.py  websocket.py
scripts/: analyze_code.py  benchmark_performance.py  check_requirements.py  clean_main.py  code_quality_utils.py  configure_security.py  fix_pyflakes_issues.py  migrate_audit_queue.py  mutation_test.py  system_validation.py  test_redis_audit_queue.py  validate_config.py  verify_redis_integration.py
static/: index.html
templates/: admin.html  index.html  revisao.html
test_templates/: test.html
tests/: README_AsyncIteratorMock.md  README_background_tasks.md  async_iterator_mock.py  conftest.py  test_agent_manager.py  test_agent_manager_minimal.py  test_api_models.py  test_architecture_improvements.py  test_async_cache.py  test_async_cache_enhancements.py  test_async_lock.py  test_audit_db.py  test_audit_lock.py  test_audit_queue.py  test_audit_queue_simple.py  test_audit_with_di.py  test_background_tasks.py  test_cache_bounds.py  test_cache_hierarchy.py  test_cache_paranoia_mode.py  test_config_watcher.py  test_connection_manager.py  test_cors_configuration.py  test_cors_monitoring.py  test_csp_integration.py  test_csp_middleware.py  test_csp_performance.py  test_csp_validation.py  test_dependencies.py  test_dependency_injection.py  test_di_container.py  test_di_container_enhanced.py  test_encryption_service.py  test_endpoints_with_di.py  test_enhanced_async_cache.py  test_enhanced_security.py  test_enhanced_security_config.py  test_error_handling_basic.py  test_error_models_only.py  test_exceptions.py  (+37 more)
(+344 files in other folders)
