[tool.poetry]
name = "resync"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
pydantic = {version = "^2.5.0", extras = ["email"]}
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
dynaconf = "^3.2.4"
jinja2 = "^3.1.4"
neo4j = "^5.14.0"
redis = "^5.0.1"
httpx = "^0.25.2"
slowapi = "^0.1.8"
pybreaker = "^1.1.0"
tenacity = "^8.2.3"
apscheduler = "^3.10.4"
watchfiles = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^42.0.0"
openpyxl = "^3.1.2"
pypdf = "^3.17.4"
python-docx = "^1.1.0"
orjson = "^3.9.10"
prometheus-client = "^0.20.0"
openai = "^1.50.0"
anthropic = "^0.5.0"
aiofiles = "^23.2.1"
cachetools = "^5.3.0"
structlog = "^23.2.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
asyncpg = "^0.27.0"
litellm = "^1.40.0"
aiohttp = "^3.9.5"
python-multipart = "^0.0.6"
agno = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
locust = "^2.14.1"
psutil = "^5.9.6"
authlib = "^1.3.0"
mutmut = "^2.4.3"
mypy = "^1.7.1"
ruff = "^0.1.8"
black = "^23.11.0"
bandit = "^1.7.6"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
types-redis = "^4.6.0.0"
types-openpyxl = "^3.1.0.0"
types-psutil = "^5.9.5.0"
fakeredis = {extras = ["aioredis"], version = "^2.20.0"}
autoflake = "2.3.1"
vulture = "2.10"

pyflakes = "3.1.0"
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
strict = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agno.*",
    "pandas.*",
    "openpyxl.*",
    "docx.*",
    "pypdf.*",
    "watchfiles.*",
    "sse_starlette.*",
    "starlette.*",
    "git.*",
    "gitdb.*",
    "smmap.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "httpx.*",
    "pytest.*",
    "sentence_transformers.*",
    "networkx.*",
    "anthropic.*",
    "openai.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
max-complexity = 10

[tool.bandit]
targets = ["resync/", "tests/"]
exclude = [".venv", "build", "dist", "__pycache__", "*.egg-info"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["resync*", "config*"]

[tool.mutmut]
paths_to_mutate = ["resync/"]
tests_dir = ["tests/"]
[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true
exclude = [".venv", "__pycache__", "build", "dist", "*.egg-info"]
ignore-init-module-imports = true
[tool.vulture]
exclude = [
    "tests/",
    "__pycache__/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
    "*.egg-info/",
    ".git/",
    ".mypy_cache/",
    ".ruff_cache/",
]
min_confidence = 80
verbose = false

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "structlog>=25.4.0",
]
