[tool.poetry]
name = "rag-microservice"
version = "1.0.0"
description = "Standalone RAG microservice for Retrieval-Augmented Generation operations"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
pydantic = "^2.6.0"
psutil = "^5.9.8"
redis = "^4.5.5"
docx = "^0.2.4"
openpyxl = "^3.1.2"
pypdf = "^4.0.1"
xlrd = "^2.0.1"
faiss-cpu = "^1.7.0"
sentence-transformers = "^2.0.0"
transformers = "^4.0.0"
torch = {version = "^2.0.0", source = "pytorch-cpu"}
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
rag-microservice = "rag_microservice.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"